# swipl-cpp-bindings

./: CMakeLists.txt  LICENSE  README.md
cmake/modules/: SPCFindCPP11.cmake  SPCFindSWIProlog.cmake
ext/gmock/: CMakeLists.txt
ext/gtest/: CMakeLists.txt
include/: LazyTermBuilders.h  PrologInterface.h
prolog/: conjunction_defs.pl  lifetime_defs.pl
src/: LazyTermBuilders.cpp  PrologInterface.cpp
tests/: CMakeLists.txt  PrologAtomTest.cpp  PrologCallTest.cpp  PrologConjunctionTest.cpp  PrologFunctorTest.cpp  PrologLifetimeTest.cpp  PrologListTest.cpp  PrologQueryTest.cpp  PrologStringTest.cpp  PrologTermTest.cpp  PrologTermVectorTest.cpp  PrologVariableTest.cpp  TestCommon.cpp  TestCommon.h
